deleted unnecessary fonts. Fixed skills overlap.

--- a/src/styles/detail.css
+++ b/src/styles/detail.css
@@ -18,7 +18,7 @@
 }
 
 .nameSub {
-	font-family: 'Raleway';
+	font-family: 'Rale-way';
 	font-size: 2.9rem;
 	text-align: right;
 	padding: 0 3vw;
